yoshimi 1.5.0 M

2017-3-6 Will
* Cli limits now report the full name as well as the values.
* Bugfix: Cli Add/Sub text not identifying bend & offset.
* AddSynth limits done.
* Doc additions and corrections.

2017-3-5 Will
* Controller & Midi control limits done.
* Complete limit definitions for main & part include type.
  i.e. integer/float & whether midi learnable.
* Doc updates.
* Bugfix: missed a couple of 'break' statements in a switch.
* Added a special case for enable default on part 1.

2017-3-4 Will
* Merged in Jesper's latest tooltip improvements.
* Voice list panning now syncs random LED in main window.
* Updated direct access doc.
* Corrected last few dates in this file :(

2017-3-3 Will
* Changed confusing naming referring to voice list vibratto.
  Also improved comment.
* Improved float/int and float/bool casts in interchange.
* Gui Addsynth base parameters now go through ring buffers.
* Reinstated Addsynth base random pan button behaviour.
* Reinstated random pan button behaviour to all others.

2017-3-2 Will
* Main part limits done (not controllers)
* Master limits done.
* Bugfix: Gui changing available parts requered two clicks.
* Fixed new regression. Cli was never just reading values.
* Gui LFOs now go entirely through ring buffers.

2017-3-1 Will
* Started identifying default and limit values for part.
  Cli direct access uses "lim" instead of value and type.
* Small adjustment to part label display.

2017-2-26 Will
* Fixed instrument background colours.

2017-2-24 Will
* Added ARM options to CMakeLists.txt
* Restored commented out AdNote cubic interpolation
  for future examination (currently would segfault).
* Updated copyright notices and dates in various files.

2017-2-23 Will
*Merged in Rob's live LFO controls.

2017-2-21 Will
* Merged  in Jesper's latest tooltip additions.
* Minor change to freemode Envelope text to remove overlaps.

2017-2-20 Will
* Remaining Cli inputs converted.
  I hope!

2017-2-19 Will